# autotools_demo

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  todo.txt
common/: Makefile.am  jupiter_print.c  jupiter_print.h  print.c  print.h
doc/: autoconf_background.txt  automake_background.txt  background.txt  how_to.txt  libtool_background.txt  review.txt
include/: Makefile.am  libjupiter.h
libjupiter/: Makefile.am  jupiter_print.c
src/: Makefile.am  Makefile.in  main.c
