AUTOMAKE_OPTIONS = foreign
# foreign		Project will not follow GNU coding standards; will not contain AUTHORS, NEWS, ChangeLog

# List subdirectories that Automake should process.
# These are procesed recursively but in the order given.
# The current directory '.' is implicitly listed last!
SUBDIRS = common include libjupiter src
